# firecracker

src/arch/src/x86_64/: msr.rs
src/arch_gen/src/x86/: msr_index.rs
src/devices/: Cargo.toml
src/devices/src/: busdevice.rs  lib.rs
src/devices/src/legacy/: i8042.rs  rtc_pl031.rs  serial.rs
src/devices/src/pseudo/: boot_timer.rs
src/devices/src/virtio/: mmio.rs
src/devices/src/virtio/balloon/: device.rs  event_handler.rs  persist.rs
src/devices/src/virtio/block/: device.rs  event_handler.rs  persist.rs  test_utils.rs
src/devices/src/virtio/net/: device.rs  event_handler.rs  persist.rs  test_utils.rs
src/devices/src/virtio/vsock/: device.rs  event_handler.rs  persist.rs  (+1 more)
src/hypervisor/: Cargo.toml
src/hypervisor/src/: lib.rs
src/logger/: Cargo.toml
src/pci/: Cargo.toml
src/pci/src/: bus.rs  device.rs  lib.rs  vfio.rs
src/vm-allocator/src/: address.rs  gsi.rs  lib.rs  system.rs
src/vm-memory/src/: lib.rs
src/vmm/: Cargo.toml
src/vmm/src/: builder.rs  interrupt.rs  lib.rs  persist.rs  resources.rs  rpc_interface.rs
src/vmm/src/device_manager/: legacy.rs  mmio.rs  persist.rs
src/vmm/src/interrupts/: kvm_irq_routing.rs  kvm_irqchip.rs  mod.rs
src/vmm/src/vmm_config/: balloon.rs  device.rs  drive.rs  mod.rs  net.rs  vsock.rs
src/vmm/src/vstate/: vm.rs
tests/framework/: artifacts.py
tests/integration_tests/functional/: test_cpu_features.py
tests/integration_tests/performance/: test_benchmarks.py
tests/integration_tests/performance/configs/: test_network_latency_config_4.14.json  test_network_latency_config_5.10.json
(+2 files in other folders)
