[package]
name = "pci"
version = "0.1.0"
authors = ["Samuel Ortiz <sameo@linux.intel.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
byteorder = "1.4.3"
vmm-sys-util = ">=0.3.1"
libc = ">=0.2.39"
vm-memory = { path = "../vm-memory" }
logger = { path = "../logger" }
vfio-ioctls = { git = "https://github.com/rust-vmm/vfio-ioctls", branch = "master" }
kvm-bindings = { version = ">=0.4.0", features = ["fam-wrappers"] }
kvm-ioctls = ">=0.8.0"
vm-device = { git = "https://github.com/sandreim/vm-device", branch = "master"}
vm-allocator = { path = "../vm-allocator"}

[dependencies.vfio-bindings]
version = "0.2.0"
features = ["fam-wrappers"]